agregados html y estilos

--- a/index.html
+++ b/index.html
@@ -4,15 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HACKATON 9</title>
+    <link rel="stylesheet" href="./estilos.css">
 
 </head>
 <body>
+
+    <main class="main">
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 1</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio1.html">Ingresar</a></nav>
+        </div>
+
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 2</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio2.html">Ingresar</a></nav>
+
+        </div>
+
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 3</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio3.html">Ingresar</a></nav>
+        </div>
+
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 4</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio4.html">Ingresar</a></nav>
+        </div>
+
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 5</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio5.html">Ingresar</a></nav>
+        </div>
+
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 6</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio6.html">Ingresar</a></nav>
+        </div>
+
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 7</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio7.html">Ingresar</a></nav>
+        </div>
+
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 8</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio8.html">Ingresar</a></nav>
+        </div>
+
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 9</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio9.html">Ingresar</a></nav>
+        </div>
+
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 10</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio10.html">Ingresar</a></nav>
+        </div>
+
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 11</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio11.html">Ingresar</a></nav>
+        </div>
+
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 12</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio12.html">Ingresar</a></nav>
+        </div>
+
+        <div class="e1">
+            <h1 class="titulo">Ejercicio 15</h1>
+            <nav class="button"><a href="./paginasEjercicios/ejercicio15.html">Ingresar</a></nav>
+        </div>
+    </main>
 
     
 
 
 
-    <script src="./ejercicios/1.js"></script>
+    <!-- <script src="./ejercicios/1.js"></script>
     <script src="./ejercicios/2.js"></script>
     <script src="./ejercicios/3.js"></script>
     <script src="./ejercicios/4.js"></script>
@@ -27,6 +96,6 @@
     <script src="./ejercicios/13.js"></script>
     <script src="./ejercicios/14.js"></script>
     <script src="./ejercicios/15.js"></script>
-   
+    -->
 </body>
 </html>
