agregada info a ejercicios

--- a/paginasEjercicios/ejercicio10.html
+++ b/paginasEjercicios/ejercicio10.html
@@ -14,7 +14,34 @@
             <h2 class="pregunta">Se tiene el nombre y la edad de tres personas. Se desea saber el nombre y la
                 edad de la persona de menor edad</h2>
             
-            <img src="" alt="">
+                <div class="resultado">
+                   <p>const nombre1 = 'Diego ';</p>
+                   <p>const edad1 = 20;</p>
+
+                   <p>const nombre2 = 'Jose ';</p>
+                   <p>const edad2 = 10;</p>
+
+                   <p>const nombre3 = 'Carlos ';</p>
+                   <p>const edad3 = 45;</p>
+
+
+                   <p>if(edad1 <= edad2 & edad3){</p>
+                   <p>    console.log(nombre1 + edad1 + ' Anios');</p>
+                   <p>    }</p>
+                   <p>    
+                   <p>    else if (edad2 <= edad1 & edad3){</p>
+                   <p>        console.log(nombre2 + edad2 + ' Anios');</p>
+                   <p>    }</p>
+
+                   <p>    else if (edad3 <= edad1 & edad2){</p>
+                   <p>        console.log(nombre3 + edad3 + ' Anios');</p>
+                   <p>    }</p>
+                   <p>    
+                   <p>    else {</p>
+                   <p>    console.log('Ingrese datos correctamente');</p>
+                   <p>}</p>
+    
+                 </div>
 
             <nav class="button"><a href="../index.html">Regresar</a></nav>
         </div>
