--- a/paginasEjercicios/ejercicio11.html
+++ b/paginasEjercicios/ejercicio11.html
@@ -16,7 +16,50 @@
                 años. Para los que tengan más de 5, el bono será de $1000. Realice un algoritmo
                 y represéntelo ,que permita determinar el bono que recibirá un trabajador</h2>
             
-            <img src="" alt="">
+                <div class="resultado">
+                   <p> const anio1 = 1;</p>
+                   <p> const anio2 = 2;</p>
+                   <p> const anio3 = 3;</p>
+                   <p> const anio4 = 4;</p>
+                   <p> const anio5 = 5;</p>
+                   <p> const anio10 = 10;</p>
+<p>
+                   <p> let trabajador;</p>
+<p>
+                   <p> trabajador = parseInt(prompt('Ingresa tus anios de trabajo'))</p>
+<p>
+<p>
+<p>
+<p>
+                   <p> if(trabajador == anio1){</p>
+                   <p>     console.log('El trabajador recibira $' + 100);</p>
+                   <p>     }</p>
+                   <p>     
+                   <p>     else if (trabajador == anio2){</p>
+                   <p>         console.log('El trabajador recibira $' + 200);</p>
+                   <p>     }</p>
+<p>
+                   <p>     else if (trabajador == anio3){</p>
+                   <p>         console.log('El trabajador recibira $' + 300);</p>
+                   <p>     }</p>
+<p>
+                   <p>     else if (trabajador == anio4){</p>
+                   <p>         console.log('El trabajador recibira $' + 400);</p>
+                   <p>     }</p>
+<p>
+                   <p>     else if (trabajador == anio5){</p>
+                   <p>         console.log('El trabajador recibira $' + 500);</p>
+                   <p>     }</p>
+<p>
+                   <p>     else if (trabajador > anio5 && trabajador <= anio10){</p>
+                   <p>         console.log('El trabajador recibira $' + 1000);</p>
+                   <p>     }</p>
+                   <p>     
+                   <p>     else {</p>
+                   <p>     console.log('Ingrese datos correctamente');</p>
+                   <p>     }</p>
+     
+                  </div>
 
             <nav class="button"><a href="../index.html">Regresar</a></nav>
         </div>
