--- a/paginasEjercicios/ejercicio12.html
+++ b/paginasEjercicios/ejercicio12.html
@@ -16,7 +16,32 @@
                 en cada uno de los 6 años? Realice el algoritmo y representan la solución,
                 utilizando el ciclo apropiado</h2>
             
-            <img src="" alt="">
+                <div class="resultado">
+                   <p> const salario = 1500;</p>
+
+                    <p>console.log('Salario inicial ' + salario);</p>
+<p>
+                    <p>const anioInc = 0.1</p>
+<p>
+<p>
+                    <p>primerAnio = salario + (salario * anioInc);</p>
+                    <p>console.log('El primer anio recibe $' + primerAnio);</p>
+<p>
+                    <p>segundoAnio = primerAnio + (primerAnio * anioInc);</p>
+                    <p>console.log( 'El segundo anio recibe $' + segundoAnio);</p>
+<p>
+                    <p>tercerAnio = segundoAnio + (segundoAnio * anioInc);</p>
+                    <p>console.log('El tercer anio recibe $' + tercerAnio);</p>
+                    <p>
+                    <p>cuartoAnio = tercerAnio + (tercerAnio * anioInc);</p>
+                    <p>console.log('El cuarto anio recibe $' + cuartoAnio);</p>
+<p>
+                    <p>quintoAnio = cuartoAnio + (cuartoAnio * anioInc);</p>
+                    <p>console.log('El quinto anio recibe $' + quintoAnio);</p>
+<p>
+                    <p>sextoAnio = quintoAnio  + (quintoAnio  * anioInc);</p>
+                    <p>console.log('Al cabo de 6 anios su salario es $' + sextoAnio);</p>
+                 </div>
 
             <nav class="button"><a href="../index.html">Regresar</a></nav>
         </div>
