--- a/paginasEjercicios/ejercicio15.html
+++ b/paginasEjercicios/ejercicio15.html
@@ -14,7 +14,25 @@
             <h2 class="pregunta">Realice un algoritmo para determinar si una persona puede votar con base en
                 su edad en las próximas elecciones</h2>
             
-            <img src="" alt="">
+                <div class="resultado">
+                   <p>const edadActual = parseInt(prompt('ingresa tu edad actual'));</p> 
+
+                   <p>const edadMin = 18;</p> 
+                   <p>const edadMax = 90;</p> 
+
+
+                   <p>if(edadActual >= edadMin && edadActual <= edadMax){</p> 
+                   <p>    console.log('Si puede votar');</p> 
+                   <p>}</p> 
+                   <p>
+                   <p>else if (edadActual < edadMin && edadActual >= 1){</p> 
+                   <p>    console.log('No puede votar');</p> 
+                   <p>}</p> 
+
+                   <p>else{</p> 
+                   <p>    console.log('Ingrese datos reales');</p> 
+                   <p>}</p> 
+                 </div>
 
             <nav class="button"><a href="../index.html">Regresar</a></nav>
         </div>
