--- a/paginasEjercicios/ejercicio2.html
+++ b/paginasEjercicios/ejercicio2.html
@@ -13,7 +13,18 @@
             <h1 class="titulo">Ejercicio 2</h1>
             <h2 class="pregunta">Un estudiante realiza 4 exámenes, calcular el promedio de estos</h2>
             
-            <img src="" alt="">
+            <div class="resultado">
+               <p>const exa1 = 12;</p></p>
+               <p>const exa2 = 15;</p>
+               <p>const exa3 = 20;</p>
+               <p>const exa4 = 08;</p>
+
+               <p>const cantExamenes= 4;</p>
+
+               <p>resultado = (exa1 + exa1 + exa1 + exa1) / cantExamenes;</p>
+
+               <p>console.log('Su promedio es ' + resultado);</p>
+            </div>
 
             <nav class="button"><a href="../index.html">Regresar</a></nav>
         </div>
