--- a/paginasEjercicios/ejercicio3.html
+++ b/paginasEjercicios/ejercicio3.html
@@ -13,7 +13,14 @@
             <h1 class="titulo">Ejercicio 3</h1>
             <h2 class="pregunta">Calcular el área de un rectángulo</h2>
             
-            <img src="" alt="">
+            <div class="resultado">
+               <p>const b = 12;</p>
+               <p>const a = 10;</p>
+
+               <p>area = a * b;</p>
+
+               <p>console.log(area);</p>
+             </div>
 
             <nav class="button"><a href="../index.html">Regresar</a></nav>
         </div>
