--- a/paginasEjercicios/ejercicio4.html
+++ b/paginasEjercicios/ejercicio4.html
@@ -13,7 +13,16 @@
             <h1 class="titulo">Ejercicio 4</h1>
             <h2 class="pregunta">Calcular el área de un triángulo</h2>
             
-            <img src="" alt="">
+            <div class="resultado">
+               <p>const base = 5;</p> 
+               <p>const altura = 10;</p> 
+
+               <p>const divisor = 2;</p> 
+
+               <p>area = (base * altura) / divisor;</p> 
+
+               <p>console.log(area);</p> 
+            </div>
 
             <nav class="button"><a href="../index.html">Regresar</a></nav>
         </div>
