--- a/paginasEjercicios/ejercicio5.html
+++ b/paginasEjercicios/ejercicio5.html
@@ -13,7 +13,14 @@
             <h1 class="titulo">Ejercicio 5</h1>
             <h2 class="pregunta">Calcular el área de una circunferencia</h2>
             
-            <img src="" alt="">
+            <div class="resultado">
+               <p>const radio = 28;</p>
+               <p>const pi = 3.14159;</p>
+
+               <p>area = pi * (radio * radio)</p>
+
+               <p>console.log(area);</p>
+             </div>
 
             <nav class="button"><a href="../index.html">Regresar</a></nav>
         </div>
