--- a/paginasEjercicios/ejercicio7.html
+++ b/paginasEjercicios/ejercicio7.html
@@ -18,7 +18,14 @@
                 los metros que requiere. Represéntelo mediante el diagrama de flujo y el
                 pseudocódigo (1 pulgada = 0.0254 m).</h2>
             
-            <img src="" alt="">
+            <div class="resultado">
+               <p>const pulgada = 0.0254;</p>
+                <p>const metros = 580;</p>
+                <p>
+                <p>resultado = metros / pulgada;</p>
+                <p>
+                <p>console.log(resultado);</p>
+            </div>
 
             <nav class="button"><a href="../index.html">Regresar</a></nav>
         </div>
