--- a/paginasEjercicios/ejercicio1.html
+++ b/paginasEjercicios/ejercicio1.html
@@ -14,7 +14,14 @@
             <h2 class="pregunta">Implementar un algoritmo que reciba 2 argumentos y los sume, el resultado se
                 deberá imprimir en pantalla</h2>
             
-            <img src="" alt="">
+            <div class="resultado">
+                <p> const num1 = 40;</p>
+                <p>const num2 = 20;</p>
+
+                <p>resultado = num1 + num2;</p>
+
+                <p>console.log(resultado); </p>
+            </div>
 
             <nav class="button"><a href="../index.html">Regresar</a></nav>
         </div>
