--- a/paginasEjercicios/ejercicio6.html
+++ b/paginasEjercicios/ejercicio6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio6/title>
+    <title>Ejercicio6</title>
     <link rel="stylesheet" href="./estilos.css">
 </head>
 <body>
@@ -14,7 +14,16 @@
             <h2 class="pregunta">Determinar el sueldo semanal de un trabajador basándose en sus horas
                 trabajadas y su salario de hora hombre</h2>
             
-            <img src="" alt="">
+            <div class="resultado">
+               <p>const sueldoHora = 8;</p>
+               <p>const horasDia = 7;</p>
+
+               <p>const diasTrabajo = 5;</p>
+
+               <p>sueldo = (sueldoHora * horasDia) * diasTrabajo;</p>
+
+               <p>console.log(sueldo);</p>
+            </div>
 
             <nav class="button"><a href="../index.html">Regresar</a></nav>
         </div>
